--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/contiricardo/desarrolloWeb#readme",
   "dependencies": {
+    "animate.css": "^4.1.1",
     "sass": "^1.58.0"
   }
 }
